@@ -39,9 +39,23 @@ resource_sets:
     mem_mb: 160000
     cpus: 10
     partition: "small"
-    nvme: "nvme:10"
+    nvme: "nvme:0"
+
+  medium_nvme:
+    runtime: 4000
+    mem_mb: 160000
+    cpus: 10
+    partition: "small"
+    nvme: "nvme:10"    
     
   large:
+    runtime: 4000
+    mem_mb: 320000
+    cpus: 20
+    partition: "small"
+    nvme: "nvme:0"
+
+  large_nvme:
     runtime: 4000
     mem_mb: 320000
     cpus: 20
