@@ -7,7 +7,7 @@ import yaml
 import os
 
 DEBUG = True
-version = "0.4.8"
+version = "0.4.9"
 
 def debug(msg):
     if DEBUG:
