@@ -4,9 +4,10 @@
 
 Version 0.4.*: 
 ------------
+9: Changed magscot rules so that also empty output is taken now into consideration and does not throw an error anymore (issue: #22)
 8: Output bugfix in Phyophlan (two arguments, unnamed)
 7: Bugfix that prevented Kraken2 from copying db files to faster disc spaces
-6: Removed a non-public referene database (ciliates) from features.yaml (issue: 17)
+6: Removed a non-public referene database (ciliates) from features.yaml (issue: #17)
 5: Added --memory {resources.mem_mb}  to the metaspades rule (issue: #15)
 4: Flag to turn on/off shm storage for kraken2 added
 3: Summary scripts for Diamond runs adjusted
